--- a/_posts/2022-11-23-Lesson1.html
+++ b/_posts/2022-11-23-Lesson1.html
@@ -3,18 +3,19 @@ layout: post
 title: "Lesson 1"
 subtitle: "A small review of what we've learned in lesson 1"
 date: 2022-11-23 10:45:13 -0400
-background: '/img/posts/06.jpg'
+background: '/img/posts/Lesson1_Background.png'
 ---
 
-<p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+<p>In this lesson, we went over a number of things, most notably getting farmilar with git.</p>
 
-<p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+<p>This essentially entailed getting used to what github looks like. One new thing I learned was how to use github pages.</p>
 
-<p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+<p>This is a specific link that will lead to your code that is in your repo. That leads me into my other point. HTML & CSS.</p>
 
-<p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+<p><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.wikitechy.com%2Fhtml%2Fimg%2Fslideshow-html%2Fslideshow-in-html.png&f=1&nofb=1&ipt=d9fb8b8a76ec70e6a12b6e6d243eb5b790f129a0d3758fc37fe028444aea4030&ipo=images">
+    Above is a sample html script that shows most of what we were introduced to in this lesson. We also learned how to "style" your webpage to make it pop.</p>
 
-<p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
+<!-- <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
 
 <h2 class="section-heading">The Final Frontier</h2>
 
@@ -37,4 +38,4 @@ background: '/img/posts/06.jpg'
 
 <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
 
-<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p>
+<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p> -->
