--- a/_posts/2020-01-31-heartbeats.html
+++ b/_posts/2020-01-31-heartbeats.html
@@ -1,15 +1,16 @@
 ---
 layout: post
-title: "I believe every human has a finite number of heartbeats. I don't intend to waste any of mine."
-date: 2020-01-30 23:45:13 -0400
-background: '/img/posts/05.jpg'
+title: "Lesson 2"
+subtitle: "A small review of what we've learned in lesson 2"
+date: 2022-11-24 23:45:13 -0400
+background: '/img/posts/lesson2_background.png'
 ---
 
-<p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+<p>This is a post about Lesson 2. Here, we are going into the basics of bootstrap. I have used bootstrap before, however this was a further in depth representation of what it is. What it does is give you an example website.</p>
 
-<p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+<p>Then using the source code, you can customize it and change the website to how you would like it. I used it to show some stuff about me and I added some pictures. You can see the wesbite on github pages <a href="https://liamhaggerty1.github.io/lab-2-bootstrap/">here</p>
 
-<p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+<!-- <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
 
 <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
 
@@ -36,4 +37,4 @@ background: '/img/posts/05.jpg'
 
 <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
 
-<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p>
+<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p> -->
