--- a/_posts/2020-01-29-prophecy.html
+++ b/_posts/2020-01-29-prophecy.html
@@ -1,18 +1,18 @@
 ---
 layout: post
-title: "Science has not yet mastered prophecy"
-subtitle: "We predict too much for the next year and yet far too little for the next ten."
+title: "Lesson 3"
+subtitle: "A small review of what we've learned in lesson 3"
 date: 2020-01-29 23:45:13 -0400
-background: '/img/posts/04.jpg'
+background: '/img/posts/Lesson3_Background.png'
 ---
 
-<p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+<p>This is a post about the latest lesson we have learned about. Lesson 3. In this, we learned about using bootstrap.</p>
 
-<p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+<p>Bootstrap is essentially a css template where you can download a css file for free and modify it to your liking to style a beautiful website.</p>
 
-<p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+<p>We also learned about different frameworks and what they actually are and what they do. Like bootstrap, a framework is a pre-written file that provides code to the end user.</p>
 
-<p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+<!-- <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
 
 <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
 
@@ -37,4 +37,4 @@ background: '/img/posts/04.jpg'
 
 <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
 
-<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p>
+<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p> -->
