--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: A short section dedicated to who I am.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGS7MuW7JpjJQ/profile-displayphoto-shrink_800_800/0/1648768781751?e=2147483647&v=beta&t=2YZLDUCGtsZtXh--7dmrnzNT4paj_JwL0zoiDKhweLo"></p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p>Hi! My name is Liam Haggerty. I am a student at Marist College studying computer science with a minor in cybersecurity. Some of my hobbies include watching movies, boxing, martial arts, hiking, and tinkering with my motorcycle.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p>I also love anything outdoors and frequently visit Lake Placid, NY in the Adirondaks.</p>
