Created Resume Page

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,26 @@
 ---
 layout: page
-title: Contact Me
-description: Have questions? I have answers.
+title: Résumé
+description: Want to look at my résumé? Or even contact me?
 background: '/img/bg-contact.jpg'
 form: true
 ---
 
 <br>
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<h2 style="color: rgb(0, 183, 255);">Work Experience</h2>
+        <p>I have a lot of work experience through internships and other employment. Some of these include:</p>
+    <h3 style="color: rgb(0, 0, 0);">Network Technician, Marist College</h3> 
+    <p>This is my current position. Managing network for Marist College, including installing and maintaining hardware, routers and other technical equipment, and troubleshooting/advising faculty, staff and students.</p>
+    <h3 style="color: rgb(0, 0, 0);">Software Engineer Intern, WorkFusion</h3> 
+    <p>Assist machine learning and java engineers in the development of digital artificial intelligence workers through code automation.</p>
+    <h3 style="color: rgb(0, 0, 0);">Intern, Wall Street Access</h3>
+    <p>Assisted the Director of Research in compiling financial data and analyses in response to customer inquiries, based on public database research, including SEC and other regulatory filings.</p>
+    <h2 style="color: rgb(0, 183, 255);">Skills</h2>
+    <p>In addition to work experience, I also hold a lot of skills.</p>
+    <p>Knowledge of Java, Python, JavaScript, SQL, C#, HTML, CSS, XML, and basic full stack web app development, as well as computer hardware and networking. Proficient in social media platforms, Microsoft Word, Excel & PowerPoint.</p>  
+    <p>If you would like an in-depth view of my resumé, you can see that <a href="https://drive.google.com/file/d/1RIvJHzyuKJcMQUTIjBHUPcZxsCiYMv_-/view?usp=sharing">here</a>.</p>
+
+<p>Want to talk further? Enter your information below so we could chat!</p>    
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
