--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 layout: page
 title: About Me
 description: A short section dedicated to who I am.
-background: '/img/bg-about.jpg'
+background: '/img/AboutMe_Background.png'
 ---
+<h3>Who am I?</h3>
 
 <p><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGS7MuW7JpjJQ/profile-displayphoto-shrink_800_800/0/1648768781751?e=2147483647&v=beta&t=2YZLDUCGtsZtXh--7dmrnzNT4paj_JwL0zoiDKhweLo"></p>
 
