added pictures/edited files

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: A short section dedicated to who I am.
-background: '/img/AboutMe_Background.png'
+background: '/img/running.JPG'
 ---
 <h3>Who am I?</h3>
 
