--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Résumé
 description: Want to look at my résumé? Or even contact me?
-background: '/img/bg-contact.jpg'
+background: '/img/resume.jpg'
 form: true
 ---
 
